<resources>
    <string name="app_name">CccAndroidTest</string>
    <string name="estimation_details">Est. details</string>
    <string name="estimate_number">Est. number</string>
    <string name="requester">Requester</string>
    <string name="revision_number">Revision Number</string>
    <string name="created_by">Created by</string>
    <string name="contact">Contact</string>
    <string name="created">Created</string>
</resources>